log

Thu 14 Mar 2024 08:22:48 PM UTC: 
 exercises.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  0|7
total_score: 0/70
528277c
Thu 14 Mar 2024 08:23:58 PM UTC: 
 exercises.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
 tests:  0|7
total_score: 0/70
ef78018
Thu 14 Mar 2024 08:24:22 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
8f02e17
Thu 14 Mar 2024 08:32:04 PM UTC: 
 exercises.c | 23 +++++++++++++++++++----
 1 file changed, 19 insertions(+), 4 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:31:7: error: unused variable ‘temp’ [-Werror=unused-variable]
   31 |   int temp;
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
f121a85
Thu 14 Mar 2024 08:36:26 PM UTC: 
 exercises.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  0|6
total_score: 10/70
f57f3a6
Thu 14 Mar 2024 08:40:02 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:34:12: error: assignment to expression with array type
   34 |       temp = arr[i];
      |            ^
exercises.c:36:25: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   36 |       arr[size - i - 1] = temp;
      |                         ^
cc1: all warnings being treated as errors
Compilation failed
f5c6798
Thu 14 Mar 2024 08:44:12 PM UTC: 
 exercises.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 20/70
d59860b
Thu 14 Mar 2024 08:59:36 PM UTC: 
 exercises.c | 26 +++++++++++++++++++++-----
 1 file changed, 21 insertions(+), 5 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:53:49: error: expected ‘)’ before ‘;’ token
   53 |   int *newArr = (int *)malloc(size * sizeof(int);
      |                              ~                  ^
      |                                                 )
exercises.c:56:1: error: expected ‘,’ or ‘;’ before ‘}’ token
   56 | }
      | ^
test.c:382:5: error: ‘main’ is normally a non-static function [-Werror=main]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:410:1: error: expected declaration or statement at end of input
  410 | }
      | ^
test.c:7:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    7 | char msg[300];
      |      ^~~
In file included from test.c:1:
exercises.c:53:8: error: unused variable ‘newArr’ [-Werror=unused-variable]
   53 |   int *newArr = (int *)malloc(size * sizeof(int);
      |        ^~~~~~
test.c:411: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:382:5: error: ‘main’ defined but not used [-Werror=unused-function]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:47:6: error: ‘readIntArray’ defined but not used [-Werror=unused-function]
   47 | void readIntArray(int arr[], int *size) {
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
63415a9
